2004-04-26  Benoît Dejean  <tazforever@dlfp.org>

	* gtksourceview/language-specs/ada.lang: Added ADA95 keywords.

2004-04-19  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Require Gtk+ 2.2.4, but disable tests if Gtk+ 2.4
	is not found.

2004-04-18  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceview.c (gtk_source_view_new_with_buffer):
	Check for buffer parameter to be non-NULL.

2004-04-18  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceview.c (key_press_cb): Also auto-indent
	when splitting a line.

2004-04-18  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	Patch by Benoît Dejean <TaZForEver@free.fr>:
	
	* gtksourceview/language-specs/c.lang: Updated to highlight C99
	keywords, types and macros.
	* gtksourceview/language-specs/python.lang: Highlight Python 2.3
	keywords, types and functions.

2004-04-14  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceview.c (compute_indentation): Stop at
	'\r' as well as '\n' or non-space character (partially fixes
	#139576, Daniel Borgmann).

2004-04-13  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: add documentation.

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

=== gtksourceview 1.0.0 ===

2004-03-22  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Version 1.0.0
	
	* README:
	* NEWS: Updated for new release.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-15  Alexander Winston  <alexander.winston@comcast.net>

	* configure.in (TESTS_LIBS): Added en_CA to ALL_LINGUAS.

2004-03-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/c.lang: handle #if 0 ... #else.

=== gtksourceview 0.9.2 ===
