@@ -28,9 +28,9 @@ G_BEGIN_DECLS
 
 typedef enum
 {
-	GTK_SOURCE_SEARCH_VISIBLE_ONLY,
-	GTK_SOURCE_SEARCH_TEXT_ONLY,
-	GTK_SOURCE_SEARCH_CASE_INSENSITIVE
+	GTK_SOURCE_SEARCH_VISIBLE_ONLY		 = 1 << 0,
+	GTK_SOURCE_SEARCH_TEXT_ONLY		 = 1 << 1,
+	GTK_SOURCE_SEARCH_CASE_INSENSITIVE	 = 1 << 2
 	/* Possible future plans: SEARCH_REGEXP */
 } GtkSourceSearchFlags;
 
