@@ -1,3 +1,8 @@
+2004-05-21  Archit Baweja  <bighead@users.sourceforge.net>
+
+	* gtksourceview/gtksourceiter.h (GtkSourceSearchFlags): make the flags
+	GFlags by adding bitmasks.
+
 2004-04-26  Benoît Dejean  <tazforever@dlfp.org>
 
 	* gtksourceview/language-specs/ada.lang: Added ADA95 keywords.
